--- a/hilbert curve/css.css
+++ b/hilbert curve/css.css
@@ -21,3 +21,11 @@ canvas#canvas{
     -moz-box-shadow: 10px 10px 31px 0 rgba(0,0,0,0.75);
     box-shadow: 10px 10px 31px 0 rgba(0,0,0,0.75);
 }
+
+h1 { font-family: Papyrus, fantasy; font-size: 23px; font-style: normal; font-variant: normal; font-weight: 700; line-height: 23px; }
+h3 { font-family: Papyrus, fantasy; font-size: 17px; font-style: normal; font-variant: normal; font-weight: 700; line-height: 23px; }
+p { font-family: Papyrus, fantasy; font-size: 14px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 23px; }
+blockquote { font-family: Papyrus, fantasy; font-size: 17px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 23px; } 
+pre { font-family: Papyrus, fantasy; font-size: 11px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 23px; }
+table { font-family: Papyrus, fantasy; font-size: 11px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 23px; }
+
